fix: resolve CORS by bypassing OPTIONS in JWT and allowing all origin patterns